--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -21,8 +21,7 @@ a {
 body {
     color: #666;
     font-size: 14px;
-    background: #f6f6f6;
-    overflow: hidden
+    background: #ffffff;
 }
 
 .block, #block {
@@ -39,7 +38,7 @@ body {
     line-height: 50px;
     background: #4586F3;
     width: 100%;
-    position: relative;
+    position: fixed;
     z-index: 5;
     top: 0;
     box-shadow: 0px 2px 10px #2a2a2a;
@@ -73,19 +72,19 @@ body {
 }
 
 #footer {
-    height: 50px;
+    height: 40px;
     line-height: 50px;
     background: #5e5e5e;
     width: 100%;
-    position: absolute;
     z-index: 200;
     bottom: 0;
     text-align: center;
+    position: fixed;
 }
 
 #footer p {
     text-align: center;
-    line-height: 50px;
+    line-height: 40px;
     color: #fbfbfb;
 }
 
@@ -96,9 +95,9 @@ body {
     float: left;
     width: 240px;
     background: #2a2a2a;
-    height: 100%;
-    position: relative;
-    overflow: auto;
+    height: 900px;
+    position: fixed;
+    margin-top: 40px;
     padding-top: 30px;
     overflow-y:hidden;
     border-right: 1px black solid;
@@ -172,11 +171,6 @@ body {
     margin-top: 12px;
 }
 
-/*右侧内容*/
-#right_content{
-    float: left;
-    padding: 10px;
-}
 
 .M1 span {
     background: url(../images/ioc.png) -9px -6px;
