--- a/css/login_css.css
+++ b/css/login_css.css
@@ -61,7 +61,7 @@ footer {
 }
 
 #loading {
-    position: absolute;
+    position: fixed;
     background: rgba(0, 0, 0, 0.31);
     left: 0px;
     top: 0px;
