--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -74,13 +74,13 @@ body {
 
 /**左侧菜单***/
 .left_menu {
-    float: left;
+    /*float: left;*/
     width: 240px;
     background: #2a2a2a;
-    /*height: 900px;*/
-    position: fixed;
-    margin-top: 30px;
     padding-top: 20px;
+    position: fixed;
+    /*height: 900px;*/
+    /*position: relative;*/
     overflow-y:hidden;
     border-right: 1px black solid;
     z-index: 4;
