--- a/admin/css/admin_css.css
+++ b/admin/css/admin_css.css
@@ -31,48 +31,6 @@
     font-size: 20px;
 }
 
-#content{
-
-}
-
-#form_content th, #form_content td {
-    padding: 10px;
-    /*background: #f6f6f6;*/
-    white-space: nowrap;
-}
-
-#form_content tr{
-    background: #f6f6f6;
-    transition:all 2s;
-    -moz-transition:all 2s; /* Firefox 4 */
-    -webkit-transition:all 2s; /* Safari and Chrome */
-    -o-transition:all 2s; /* Opera */
-}
-#form_content .edit_complete{
-    background: rgba(52, 168, 83, 0.71);
-}
-
-#form_content tbody tr:hover{
-    cursor: pointer;
-    background: #bebebe;
-    /*animation: myfirst 1s forwards;*/
-    /*transition: all 1s linear;*/
-}
-
-#form_content table{
-
-}
-
-#form_content td{
-    max-width: 120px;
-    overflow: hidden;
-    text-overflow: ellipsis; /* for IE */
-    -moz-text-overflow: ellipsis; /* for Firefox,mozilla */
-}
-#form_content td span {
-    margin-top: 3px;
-}
-
 #right_content {
     float: left;
     margin: 70px 20px 20px 260px;
@@ -80,6 +38,55 @@
     /*padding: 80px 40px 40px 280px;*/
 }
 
+
+/*表格通用样式*/
+tr {
+    background: #f6f6f6;
+    transition: all 2s;
+    -moz-transition: all 2s; /* Firefox 4 */
+    -webkit-transition: all 2s; /* Safari and Chrome */
+    -o-transition: all 2s; /* Opera */
+}
+
+tr:hover {
+    cursor: pointer;
+    background: #bebebe;
+    /*animation: myfirst 1s forwards;*/
+    /*transition: all 1s linear;*/
+}
+
+th, td {
+    padding: 10px;
+    /*background: #f6f6f6;*/
+    white-space: nowrap;
+}
+
+.edit_complete {
+    background: rgba(52, 168, 83, 0.71);
+}
+
+td > span {
+    margin-top: 3px;
+}
+/*用户管理样式*/
+
+#user_status td {
+    max-width: 120px;
+    overflow: hidden;
+    text-overflow: ellipsis; /* for IE */
+    -moz-text-overflow: ellipsis; /* for Firefox,mozilla */
+}
+
+/*课程管理样式*/
+#course_status td {
+    min-width: 50px;
+    max-width: 270px;
+    overflow: hidden;
+    text-overflow: ellipsis; /* for IE */
+    -moz-text-overflow: ellipsis; /* for Firefox,mozilla */
+}
+
+/*加载遮罩样式*/
 #loading {
     position: fixed;
     background: rgba(0, 0, 0, 0.31);
