--- a/play/css/play_css.css
+++ b/play/css/play_css.css
@@ -49,7 +49,7 @@ div {
     margin: 0px auto;
 }
 
-.player_bg{
+.player_bg {
     background: black;
 }
 
@@ -90,29 +90,35 @@ div {
 .vjs-control-bar {
     padding-top: 3px;
 }
-.vjs-remaining-time-display{
+
+.vjs-remaining-time-display {
     position: relative;
     bottom: 3px;
 }
-.vjs-menu-content{
+
+ul[class='vjs-menu-content'] {
     visibility: hidden;
 }
 
-.player{
+.player {
     position: relative;
 }
 
-#course_player{
+#course_player {
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
     /*高度需要jq动态计算*/
     margin-left: -450px;
-    margin-top:-200px ;
+    margin-top: -200px;
 }
 
-/*笔记弹窗相关*/
-.note_pop{
+/*笔记相关*/
+#new_note {
+
+}
+
+.note_pop {
     background: white;
     z-index: 999;
     position: absolute;
@@ -120,9 +126,11 @@ div {
     width: 300px;
     height: 200px;
 }
-.note_pop>input{
+
+.note_pop > input {
     margin-bottom: 10px;
 }
-.note_pop>textarea{
+
+.note_pop > textarea {
     margin-bottom: 10px;
 }
