--- a/play/css/play_css.css
+++ b/play/css/play_css.css
@@ -37,6 +37,10 @@ div {
     /*border: 1px red solid;*/
 }
 
+.course_title{
+    padding: 10px;
+}
+
 .play {
     margin: 10px;
 }
@@ -125,6 +129,8 @@ ul[class='vjs-menu-content'] {
 }
 
 .note_pop {
+    border: 1px gray solid;
+    box-shadow: 2px 2px 10px #d0d0d0;
     background: white;
     z-index: 999;
     position: absolute;
