--- a/play/css/play_css.css
+++ b/play/css/play_css.css
@@ -1,6 +1,14 @@
+
+body {
+    background: url(../img/play_bg1.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed
+}
+
 .play_header {
+    background: white;
     padding: 10px 30px 10px 30px;
-    box-shadow: 0px 2px 10px #d0d0d0;
+    box-shadow: 0px 2px 10px #2a2a2a;
 }
 
 .play_header {
@@ -37,8 +45,8 @@ div {
     /*border: 1px red solid;*/
 }
 
-.course_title{
-    padding: 10px;
+.course_title {
+    visibility: hidden;
 }
 
 .play {
@@ -65,30 +73,23 @@ div {
 }
 
 .info {
-    padding-top: 10px;
-    margin: 10px;
+    padding: 10px;
 }
 
 .teacher_info {
-    background: #72d8ff;
+    background: white;
     width: 70%;
     height: 300px;
 }
 
 .course_info {
-    background: #6dc9a4;
+    background: white;
     width: 70%;
     height: 300px;
 }
 
 .info > div {
     margin: 0px auto;
-}
-
-.reply {
-    width: 70%;
-    margin: 10px auto;
-    height: 500px;
 }
 
 /*播放器相关*/
@@ -120,6 +121,7 @@ ul[class='vjs-menu-content'] {
 
 /*笔记相关*/
 .note {
+    background: white;
     margin-left: 10px;
     border: 1px black solid;
 }
@@ -199,6 +201,41 @@ ul[class='vjs-menu-content'] {
     padding-left: 10px;
     font-size: 26px;
 }
-.teacher_info_p2{
+
+.teacher_info_p2 {
     padding: 10px;
+}
+
+/*回复区相关*/
+.reply {
+    background: white;
+    width: 70%;
+    margin: 10px auto;
+    min-height: 300px;
+    padding: 10px;
+}
+
+.reply table {
+    margin: 0px auto;
+    width: 70%;
+}
+
+.reply .avatar {
+    width: 40px;
+}
+
+.reply .reply_username {
+    font-size: 20px;
+}
+
+.reply .content {
+    min-height: 80px;
+    font-size: 24px;
+}
+
+.reply .reply_edit {
+    margin-top: 10px;
+}
+.reply_btn:hover{
+    cursor: pointer;
 }
