--- a/css/index_css.css
+++ b/css/index_css.css
@@ -1,46 +1,73 @@
-.container-fluid div {
-    text-align: center;
-    padding-top: 100px;
-}
-
 /*顶部*/
-.header div {
-    height: 100px;
+.header {
+    /*visibility: hidden;*/
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.71);
+    position: relative;
+    z-index: 20;
 }
 
-.header .logo {
-    background: red;
+.header .logo_td {
+    background: white;
+    transition: background 1s;
+    -moz-transition: background 1s; /* Firefox 4 */
+    -webkit-transition: background 1s; /* Safari 和 Chrome */
+    -o-transition: background 1s; /* Opera */
 }
 
-.header .searcher {
-    background: orange;
+.header .search_td {
+    background: white;
 }
 
-.header .userinfo {
-    background: gray;
+.header .info_td {
+    background: white;
 }
 
 .header .logo p {
-    line-height: 100px;
+    line-height: 50px;
     text-align: center;
-    font-size: 30px
+    font-size: 22px
 }
-.header .userinfo p{
-    line-height: 100px;
+
+.header .userinfo p {
+    line-height: 50px;
     text-align: center;
 }
+
 .header .userinfo img {
     width: 30px;
-    margin: 0 5px 10px 0
+    margin: 0 5px 10px 0;
 }
-.header .userinfo span{
-    font-size: 30px;
+
+.header .userinfo span {
+    font-size: 26px;
 }
-.header .userinfo a{
+
+.header .userinfo a {
     margin-left: 20px;
     font-size: 18px;
 }
 
-.header .searcher .search form{
-
+.header .searcher .search form {
 }
+
+p {
+    margin: 0;
+}
+
+/*页面主体*/
+body {
+    overflow: hidden;
+}
+
+.content_main {
+    position: relative;
+    top: -54px;
+    margin: 0 10px 10px 10px;
+    border: 1px red solid;
+    text-align: center;
+}
+
+.content_main .test1{
+   padding-top: 60px;
+}
+
