--- a/play/css/play_css.css
+++ b/play/css/play_css.css
@@ -177,7 +177,7 @@ ul[class='vjs-menu-content'] {
 
 .course_views, .course_rating_count {
     float: right;
-    margin: 10px 10px 0px 0px;
+    margin: 10px 10px 0 0;
     font-size: 16px;
 }
 
