--- a/css/index_css.css
+++ b/css/index_css.css
@@ -2,7 +2,7 @@
 .header {
     /*visibility: hidden;*/
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.71);
-    position: relative;
+    position: absolute;
     z-index: 20;
 }
 
@@ -101,6 +101,7 @@ body {
 }
 
 .content_main {
-    top: -60px;
+    margin-top: 80px;
+    height: 1000px;
 }
 
