--- a/css/hub-slider.css
+++ b/css/hub-slider.css
@@ -37,8 +37,8 @@
 
 .hub-slider-controls {
     position: relative;
-    right: 0;
-    top: 0;
+    left: 10px;
+    top: 10px;
     z-index: 1000;
 }
 
