--- a/css/index_css.css
+++ b/css/index_css.css
@@ -140,16 +140,18 @@ h3 {
     display: inline-block;
     padding: 5px 10px;
     font-size: 14px;
-    color: #fff;
+
+    color: #4d92d9;
     border: 2px solid #4d92d9;
-    background-color: #4d92d9;
+
+    background-color: transparent;
     text-decoration: none;
     transition: 0.4s;
 }
 
 .newest_upload .btn:hover {
-    background-color: transparent;
-    color: #4d92d9;
+    background-color: #4d92d9;
+    color: #fff;
     transition: 0.4s;
 }
 
@@ -163,5 +165,37 @@ h3 {
     line-height: 20px;
     opacity: 0;
     width: 100%;
-    padding: 20px;
+}
+
+.text-desc p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.text-desc .fa-info-circle {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    text-decoration: none;
+}
+
+/*背景*/
+.index_bg {
+
+}
+.test {
+    width: 400px;
+    height: 100px;
+    border: 1px solid #ccc;
+}
+.test h3 {
+    background: white;
+    height: 20px;
+    margin: -10px auto 0;
+    padding: 0 10px;
+    text-align: center;
+    width: 100px;
 }
