--- a/css/login_css.css
+++ b/css/login_css.css
@@ -8,7 +8,17 @@ body {
     position: absolute;
     /*right: 100px;*/
     width: 310px;
+    z-index: 999;
+}
 
+.login_bg{
+    position: absolute;
+    background: black;
+    opacity: 0.8;
+    -webkit-filter: blur(3px);
+    -moz-filter: blur(3px);
+    -ms-filter: blur(3px);
+    filter: blur(3px);
 }
 
 .login_input {
