--- a/css/index_css.css
+++ b/css/index_css.css
@@ -1,7 +1,7 @@
 /*顶部*/
 .header {
     /*visibility: hidden;*/
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.71);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.49);
     position: absolute;
     z-index: 20;
 }
@@ -104,12 +104,12 @@ body {
     height: 1000px;
 }
 
-/*最新上传*/
-.newest_upload .box {
+/*视频列表*/
+.video_list .box {
     margin: 10px;
 }
 
-.newest_upload .box, .newest_upload .box img {
+.video_list .box, .video_list .box img {
     width: 250px;
     height: 140px;
 }
@@ -136,7 +136,7 @@ h3 {
     margin: 5px 0 10px;
 }
 
-.newest_upload .btn {
+.video_list .btn {
     display: inline-block;
     padding: 5px 10px;
     font-size: 14px;
@@ -149,7 +149,7 @@ h3 {
     transition: 0.4s;
 }
 
-.newest_upload .btn:hover {
+.video_list .btn:hover {
     background-color: #4d92d9;
     color: #fff;
     transition: 0.4s;
@@ -188,14 +188,20 @@ h3 {
 }
 .test {
     width: 400px;
-    height: 100px;
+    height: 110px;
     border: 1px solid #ccc;
 }
 .test h3 {
+    font-weight: bold;
     background: white;
     height: 20px;
     margin: -10px auto 0;
     padding: 0 10px;
     text-align: center;
     width: 100px;
+}
+
+
+.subject_text a{
+    padding-left: 20px;
 }
