--- a/css/index_css.css
+++ b/css/index_css.css
@@ -205,3 +205,9 @@ h3 {
 .subject_text a{
     padding-left: 20px;
 }
+
+.hub-slider{
+    width: 900px;
+    margin-left: 20px;
+    left: 80px;
+}
