--- a/css/index_css.css
+++ b/css/index_css.css
@@ -46,9 +46,6 @@
     font-size: 18px;
 }
 
-.header .searcher .search form {
-}
-
 p {
     margin: 0;
 }
@@ -119,19 +116,21 @@ body {
     float: left;
     padding-bottom: 80px;
 }
-
-ul {
+.video_list td{
+    padding-left: 5px;
+}
+.video_list ul {
     margin: 0 -1.5%;
 }
 
-li {
+.video_list li {
     float: left;
     width: 31.33%;
     margin: 10px 1%;
     list-style: none;
 }
 
-h3 {
+.video_list h3 {
     font-size: 20px;
     margin: 5px 0 10px;
 }
@@ -208,6 +207,5 @@ h3 {
 
 .hub-slider{
     width: 900px;
-    margin-left: 20px;
     left: 80px;
 }
