--- a/search/css/search_css.css
+++ b/search/css/search_css.css
@@ -1,6 +1,6 @@
 
 .content{
-    padding: 10px;
+    padding: 20px;
 }
 
 table{
@@ -15,5 +15,89 @@ ul {
 li {
     display: inline-block;
     padding-left: 10px;
+}
+
+.search_result{
+    padding: 20px;
+}
+
+/*结果列表*/
+.search_result .box {
+    margin: 10px;
+}
+
+.search_result .box, .search_result .box img {
+    width: 250px;
+    height: 140px;
+}
+
+.full-length {
+    width: 100%;
+    float: left;
+    padding-bottom: 80px;
+}
+
+.search_result ul {
+    margin: 0 -1.5%;
+}
+
+.search_result li {
+    float: left;
+    width: 31.33%;
+    margin: 10px 1%;
+    list-style: none;
+}
+
+.search_result h3 {
+    font-size: 20px;
+    margin: 5px 0 10px;
+}
+.text-desc {
+    word-break: break-all;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #fff;
+    height: 100%;
+    line-height: 20px;
+    opacity: 0;
+    width: 100%;
+    padding-top: 50px;
+}
+
+.text-desc p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.text-desc .fa-info-circle {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    text-decoration: none;
+}
+.search_result .btn {
+    display: inline-block;
+    padding: 5px 10px;
+    font-size: 14px;
+
+    color: #4d92d9;
+    border: 2px solid #4d92d9;
+
+    background-color: transparent;
+    text-decoration: none;
+    transition: 0.4s;
+}
+
+.search_result .btn:hover {
+    background-color: #4d92d9;
+    color: #fff;
+    transition: 0.4s;
+}
+.search_result td{
+    padding-left: 5px;
 }
 
