--- a/css/index_css.css
+++ b/css/index_css.css
@@ -185,16 +185,16 @@ body {
 .index_bg {
 
 }
-.test {
+.index_tag_search {
     width: 400px;
     height: 110px;
     border: 1px solid #ccc;
 }
-.test h3 {
+.index_tag_search h3 {
     font-weight: bold;
     background: white;
     height: 20px;
-    margin: -10px auto 0;
+    margin: -10px auto 15px;
     padding: 0 10px;
     text-align: center;
     width: 100px;
@@ -208,4 +208,10 @@ body {
 .hub-slider{
     width: 900px;
     left: 80px;
+}
+
+/*搜索建议*/
+.search_suj{
+    color: dodgerblue;
+    cursor: pointer;
 }
