--- a/css/index_css.css
+++ b/css/index_css.css
@@ -1,3 +1,7 @@
+body{
+    background: url(../resource/index_bg1.jpg) no-repeat center center fixed;
+}
+
 /*顶部*/
 .header {
     /*visibility: hidden;*/
@@ -187,14 +191,15 @@ body {
 }
 .index_tag_search {
     width: 400px;
-    height: 110px;
+    height: 130px;
     border: 1px solid #ccc;
+    background: white;
+    opacity: 0.8;
 }
 .index_tag_search h3 {
     font-weight: bold;
-    background: white;
     height: 20px;
-    margin: -10px auto 15px;
+    margin: 10px auto 15px;
     padding: 0 10px;
     text-align: center;
     width: 100px;
@@ -207,6 +212,7 @@ body {
 
 .hub-slider{
     width: 900px;
+    top: 30px;
     left: 80px;
 }
 
