--- a/css/login_css.css
+++ b/css/login_css.css
@@ -1,41 +1,66 @@
 
 body {
-    padding: 0px;
-    margin: 0px;
+    background: url(../resource/bg.jpg) no-repeat center center fixed;
+    padding: 0;
+    margin: 0;
 }
 
 #login {
+    padding: 10px;
     position: absolute;
     /*right: 100px;*/
     width: 310px;
+    overflow: hidden;
     z-index: 999;
+    box-shadow: 2px 2px 10px rgb(90, 90, 90);
 }
 
-.login_bg{
+#login:before {
+    content: '';
     position: absolute;
-    background: black;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+    background: url(../resource/bg.jpg) no-repeat center center fixed;
+}
+
+.login_bg {
+    position: absolute;
+    background: rgb(90, 90, 90);
     opacity: 0.8;
     -webkit-filter: blur(3px);
-    -moz-filter: blur(3px);
-    -ms-filter: blur(3px);
     filter: blur(3px);
 }
 
 .login_input {
-    margin: 20px 0px 0px 10px;
-    width: 300px;
+    padding-left: 30px;
+    margin-top: 10px;
+    width: 260px;
+}
+
+.form-control-feedback {
+    left: 0;
+    top: 0;
 }
 
 #checkbox_div {
-    margin: 0px 0px 0px 10px;
-}
-
-.checkbox {
-    padding: 5px;
+    moz-user-select: -moz-none;
+    -moz-user-select: none;
+    -o-user-select:none;
+    -khtml-user-select:none;
+    -webkit-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    padding: 0 20px 0 20px;
 }
 
 #btn_div {
-    margin: 10px 0px 0px 10px;
+    padding: 0 20px 0 20px;
+    margin: 10px auto;
 }
 
 #reg_btn {
@@ -48,7 +73,7 @@ body {
 }
 
 #login_role {
-    margin: 20px 0px 0px 10px;
+    margin: 20px 0 0 10px;
 }
 
 #login_form {
@@ -58,7 +83,7 @@ body {
 #footer {
     width: 100%;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     text-align: center;
     /*background: rgba(86, 86, 86, 0.5);*/
 }
@@ -70,24 +95,8 @@ footer {
     /*background: rgba(105, 105, 105, 0.31);*/
 }
 
-#loading {
-    position: fixed;
-    background: rgba(0, 0, 0, 0.31);
-    left: 0px;
-    top: 0px;
-    text-align: center;
-    z-index: 200;
-}
-
-#loading_main {
-    position: relative;
-    font-size: 16px;
-    color: black;
-    top: 20%;
-}
-
 .login_logo {
-    margin: 0px auto 50px auto;
+    margin: 0 auto 30px auto;
     width: 60%;
 }
 
