--- a/css/index_css.css
+++ b/css/index_css.css
@@ -1,5 +1,6 @@
 body{
-    background: url(../resource/index_bg1.jpg) no-repeat center center fixed;
+    /*background: url(../resource/index_bg1.jpg) no-repeat center center fixed;*/
+    background-attachment:fixed
 }
 
 /*顶部*/
@@ -195,6 +196,7 @@ body {
     border: 1px solid #ccc;
     background: white;
     opacity: 0.8;
+    box-shadow: 0 2px 10px #5d5d5d;
 }
 .index_tag_search h3 {
     font-weight: bold;
