--- a/bbs/css/post_detail.css
+++ b/bbs/css/post_detail.css
@@ -11,6 +11,14 @@ p {
     border: 1px solid;
     width: 100%;
     margin: 10px 0;
+    box-shadow:3px 3px 5px #a8a8a8;
+    transition: all 1s;
+    -moz-transition: all 1s; /* Firefox 4 */
+    -webkit-transition: all 1s; /* Safari and Chrome */
+    -o-transition: all 1s; /* Opera */
+}
+.post_table:hover{
+    background: #ececec;
 }
 
 .post_body{
