--- a/css/login_css.css
+++ b/css/login_css.css
@@ -38,7 +38,7 @@ body {
 
 .login_input {
     padding-left: 30px;
-    margin-top: 10px;
+    margin-top: 5px;
     width: 260px;
 }
 
@@ -55,7 +55,7 @@ body {
     -webkit-user-select:none;
     -ms-user-select:none;
     user-select:none;
-    padding: 0 20px 0 20px;
+    padding: 0 10px 0 20px;
 }
 
 #btn_div {
@@ -77,7 +77,7 @@ body {
 }
 
 #login_form {
-    margin-top: 20px;
+    margin-top: 0;
 }
 
 #footer {
@@ -96,7 +96,7 @@ footer {
 }
 
 .login_logo {
-    margin: 0 auto 30px auto;
+    margin: 0 auto auto;
     width: 60%;
 }
 
