重写颈部区域

--- a/css/index_css.css
+++ b/css/index_css.css
@@ -1,11 +1,11 @@
-body{
+body {
     /*background: url(../resource/index_bg1.jpg) no-repeat center center fixed;*/
-    background-attachment:fixed;
+    background-attachment: fixed;
     background: #eee !important;
 }
 
 /*顶部*/
-.change_avatar{
+.change_avatar {
     cursor: pointer;
 }
 
@@ -121,9 +121,11 @@ body {
     float: left;
     padding-bottom: 80px;
 }
-.video_list td{
+
+.video_list td {
     padding-left: 5px;
 }
+
 .video_list ul {
     margin: 0 -1.5%;
 }
@@ -187,102 +189,236 @@ body {
 }
 
 /*分类导航部分*/
-.subject_text a{
+.subject_text a {
     padding: 0 10px;
 }
 
-.subject_tag_table{
+.subject_tag_table {
     height: 400px;
     background: rgba(0, 0, 0, 0.5);
 }
 
-.all_courses:hover{
+.all_courses:hover {
     cursor: pointer;
 }
 
-.subject_tag_table td{
+.subject_tag_table td {
     color: whitesmoke;
     text-align: center;
     font-size: 16px;
     padding: 3px 8px;
 }
-.subject_tag_table a:link,.subject_tag_table a:visited{
+
+.subject_tag_table a:link, .subject_tag_table a:visited {
     color: whitesmoke;
 }
 
-.text_hover_ghost{
+.text_hover_ghost {
     font-size: 18px;
     transition: all 0.5s;
 }
-.text_hover_ghost:hover{
+
+.text_hover_ghost:hover {
     font-size: 22px;
 }
 
-.go_down{
+.go_down {
     cursor: pointer;
 }
-.go_down:hover,.about_me:hover{
+
+.go_down:hover, .about_me:hover {
     color: dodgerblue;
 }
-.about_me{
+
+.about_me {
+    cursor: pointer;
+}
+
+.slider_extra img {
+    height: 100px;
+    width: 150px;
+    margin: 3px;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.49);
+}
+
+/*随机视频*/
+.slider_extra td {
+    padding: 5px;
     cursor: pointer;
 }
 
 /*.hub-slider{*/
-    /*width: 900px;*/
-    /*top: 30px;*/
-    /*left: 80px;*/
+/*width: 900px;*/
+/*top: 30px;*/
+/*left: 80px;*/
 /*}*/
 
 /*搜索建议*/
-.search_suj{
+.search_suj {
     color: dodgerblue;
     cursor: pointer;
 }
 
 /*论坛部分*/
-.bbs_prev{
+.bbs_prev {
     background: whitesmoke;
     padding: 0 10px 0;
-    border:1px solid;
-    border-radius:5px;
+    border: 1px solid;
+    border-radius: 5px;
     padding-bottom: 10px;
     margin: 10px 20px;
 }
 
-.bbs_prev_content{
+.bbs_prev_content {
     margin: 0 auto;
     width: 100%;
 }
 
 /*头像修改*/
-.change_avatar_list img{
+.change_avatar_list img {
     height: 50%;
 }
-.change_avatar_list_avatar{
+
+.change_avatar_list_avatar {
     cursor: pointer;
 }
-.avatar_choose{
+
+.avatar_choose {
     background: rgba(93, 93, 93, 0.51);
 }
 
-@keyframes load {0% {width:0%;} 100% {width:100%;}}
-.trent-slider {width:100%;position:relative;overflow:hidden;}
-.t-slide {position:absolute;left:0;right:0;bottom:0;top:0;transition:.65s;}
-.t-slide img {width:100%;height:100%;}
-.t-slider-controls {position:absolute;top:0;bottom:0;left:0;right:0;}
-.t-slider-controls .arrow {min-height:100%;width:50px;position:relative;transition:.25s;}
-.t-slider-controls .arrow:hover {cursor:pointer;}
-.t-slider-controls .right-arrow {float:right;} .t-slider-controls .left-arrow {float:left;}
-.t-slider-controls .arrow .arrow-container {position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:20px;}
-.t-slider-controls .arrow .arrow-container .arrow-icon {position:relative;width:42px;height:42px;color:#fafafa;border-radius:50%;}
-.t-slider-controls .arrow .arrow-container .arrow-icon i {position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);}
-.t-slider-controls .t-load-bar {width:100%;height:5px;}
-.t-slider-controls .t-load-bar .inner-load-bar {background:rgba(200,200,200,0.65);height:100%;}
-.t-slider-controls .t-dots-container {position:absolute;bottom:0;left:50%;transform:translateX(-50%);height:20px;min-width:350px;}
-.t-slider-controls .t-slide-dots-wrap {height:100%;width:100%;position:relative;}
-.t-slider-controls .t-slide-dots {position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);display:table;content:"";clear:both;}
-.t-slider-controls .t-slide-dots .t-dot {background:#fafafa;width:8px;height:8px;margin:5px;float:left;border-radius:50%;transition:.65s;}
-.t-slider-controls .t-slide-dots .t-dot.current-dot,.t-slider-controls .t-slide-dots .t-dot:hover {transform:scale(1.65);cursor:pointer;}
+@keyframes load {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+.trent-slider {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.t-slide {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    transition: .65s;
+}
+
+.t-slide img {
+    width: 100%;
+    height: 100%;
+}
+
+.t-slider-controls {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.t-slider-controls .arrow {
+    min-height: 100%;
+    width: 50px;
+    position: relative;
+    transition: .25s;
+}
+
+.t-slider-controls .arrow:hover {
+    cursor: pointer;
+}
+
+.t-slider-controls .right-arrow {
+    float: right;
+}
+
+.t-slider-controls .left-arrow {
+    float: left;
+}
+
+.t-slider-controls .arrow .arrow-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+}
+
+.t-slider-controls .arrow .arrow-container .arrow-icon {
+    position: relative;
+    width: 42px;
+    height: 42px;
+    color: #fafafa;
+    border-radius: 50%;
+}
+
+.t-slider-controls .arrow .arrow-container .arrow-icon i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.t-slider-controls .t-load-bar {
+    width: 100%;
+    height: 5px;
+}
+
+.t-slider-controls .t-load-bar .inner-load-bar {
+    background: rgba(200, 200, 200, 0.65);
+    height: 100%;
+}
+
+.t-slider-controls .t-dots-container {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 20px;
+    min-width: 350px;
+}
+
+.t-slider-controls .t-slide-dots-wrap {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.t-slider-controls .t-slide-dots {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: table;
+    content: "";
+    clear: both;
+}
+
+.t-slider-controls .t-slide-dots .t-dot {
+    background: #fafafa;
+    width: 8px;
+    height: 8px;
+    margin: 5px;
+    float: left;
+    border-radius: 50%;
+    transition: .65s;
+}
+
+.t-slider-controls .t-slide-dots .t-dot.current-dot, .t-slider-controls .t-slide-dots .t-dot:hover {
+    transform: scale(1.65);
+    cursor: pointer;
+}
+
 /*close slider css*/
-@media screen and (min-width:768px) {.t-slider-controls .arrow:hover {background:rgba(0,0,0,0.32);}}
+@media screen and (min-width: 768px) {
+    .t-slider-controls .arrow:hover {
+        background: rgba(0, 0, 0, 0.32);
+    }
+}
