--- a/css/login_css.css
+++ b/css/login_css.css
@@ -1,39 +1,25 @@
 
 body {
-    background: url(../resource/bg.jpg) no-repeat center center fixed;
+    /*background: url(../resource/bg.jpg) no-repeat center center fixed;*/
     padding: 0;
     margin: 0;
 }
 
 #login {
-    padding: 10px;
+    padding: 20px;
     position: absolute;
+    background: white;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
     /*right: 100px;*/
     width: 310px;
     overflow: hidden;
     z-index: 999;
-    box-shadow: 2px 2px 10px rgb(90, 90, 90);
-}
-
-#login:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    -webkit-filter: blur(5px);
-    filter: blur(5px);
-    background: url(../resource/bg.jpg) no-repeat center center fixed;
-}
-
-.login_bg {
-    position: absolute;
-    background: rgb(90, 90, 90);
-    opacity: 0.8;
-    -webkit-filter: blur(3px);
-    filter: blur(3px);
+    box-shadow: 3px 3px 20px rgba(90, 90, 90, 0.41);
+    border-radius: 3px;
 }
 
 .login_input {
@@ -48,13 +34,6 @@ body {
 }
 
 #checkbox_div {
-    moz-user-select: -moz-none;
-    -moz-user-select: none;
-    -o-user-select:none;
-    -khtml-user-select:none;
-    -webkit-user-select:none;
-    -ms-user-select:none;
-    user-select:none;
     padding: 0 10px 0 20px;
 }
 
@@ -96,8 +75,14 @@ footer {
 }
 
 .login_logo {
-    margin: 0 auto auto;
-    width: 60%;
+    width: 64px;
+    display: inline;
+}
+
+#Mycanvas {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 /*消除遮罩bug*/
