--- a/css/index_css.css
+++ b/css/index_css.css
@@ -5,51 +5,49 @@ body {
 }
 
 /*顶部*/
+/*.change_avatar {*/
+    /*cursor: pointer;*/
+/*}*/
+
+/*.header {*/
+    /*!*visibility: hidden;*!*/
+    /*box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.31);*/
+    /*position: absolute;*/
+    /*z-index: 20;*/
+/*}*/
+/*.header td{*/
+    /*background: white;*/
+/*}*/
+/*.header .logo_td {*/
+    /*padding-left: 20px;*/
+    /*font-size: 24px;*/
+/*}*/
+
+/*.header .search_td {*/
+    /*min-width: 315px;*/
+/*}*/
+
+/*.header .info_td {*/
+    /*min-width: 170px;*/
+/*}*/
+
+/*.header .userinfo p {*/
+    /*line-height: 60px;*/
+    /*text-align: center;*/
+/*}*/
+
 .change_avatar {
-    cursor: pointer;
+    width: 36px;
 }
 
-.header {
-    /*visibility: hidden;*/
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.49);
-    position: absolute;
-    z-index: 20;
-}
+/*.header .userinfo span {*/
+    /*font-size: 26px;*/
+/*}*/
 
-.header .logo_td {
-    padding-left: 20px;
-    background: white;
-    font-size: 24px;
-}
-
-.header .search_td {
-    min-width: 315px;
-    background: white;
-}
-
-.header .info_td {
-    background: white;
-    min-width: 170px;
-}
-
-.header .userinfo p {
-    line-height: 60px;
-    text-align: center;
-}
-
-.header .userinfo img {
-    width: 40px;
-    margin: 0 5px 10px 0;
-}
-
-.header .userinfo span {
-    font-size: 26px;
-}
-
-.header .userinfo a {
-    margin-left: 20px;
-    font-size: 18px;
-}
+/*.header .userinfo a {*/
+    /*margin-left: 20px;*/
+    /*font-size: 18px;*/
+/*}*/
 
 p {
     margin: 0;
