--- a/css/login_css.css
+++ b/css/login_css.css
@@ -79,6 +79,15 @@ footer {
     display: inline;
 }
 
+.login_loader {
+    position: absolute;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.21);
+    display: none;
+}
+
 #Mycanvas {
     position: absolute;
     top: 0;
