--- a/css/login_css.css
+++ b/css/login_css.css
@@ -33,13 +33,9 @@ body {
     top: 0;
 }
 
-#checkbox_div {
-    padding: 0 10px 0 20px;
-}
 
 #btn_div {
-    padding: 0 20px 0 20px;
-    margin: 10px auto;
+
 }
 
 #reg_btn {
@@ -57,6 +53,10 @@ body {
 
 #login_form {
     margin-top: 0;
+}
+
+#reg_modal input{
+    max-width: 300px;
 }
 
 #footer {
@@ -92,44 +92,4 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
-}
-
-/*消除遮罩bug*/
-
-/*美化checkbox*/
-.demo--label {
-    margin: 20px 20px 0 0;
-    display: inline-block;
-    font-weight: normal;
-}
-
-.demo--radio {
-    display: none
-}
-
-.demo--radioInput {
-    background-color: #fff;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    border-radius: 100%;
-    display: inline-block;
-    height: 16px;
-    margin-right: 10px;
-    margin-top: -1px;
-    vertical-align: middle;
-    width: 16px;
-    line-height: 1
-}
-
-.demo--radio:checked + .demo--radioInput:after {
-    background-color: #57ad68;
-    border-radius: 100%;
-    content: "";
-    display: inline-block;
-    height: 12px;
-    margin: 1px;
-    width: 12px
-}
-
-.demo--checkbox.demo--radioInput, .demo--radio:checked + .demo--checkbox.demo--radioInput:after {
-    border-radius: 0
 }
